--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,9 @@
   .button-color {
     @apply bg-gradient-to-r from-[#5361BB] via-[#6C5DBF] to-[#7E5CBA] hover:from-[#4A56A8] hover:via-[#6354AC] hover:to-[#7553A7];
   }
+  .gradient-color {
+    @apply bg-gradient-to-r from-[#5361BB] via-[#6C5DBF] to-[#7E5CBA] hover:from-[#4A56A8] hover:via-[#6354AC] hover:to-[#7553A7];
+  }
 }
 
 @theme {
